style.css
a {    
    color: red;
}

.container {
    width: 992px;
    margin: auto;        
    border-radius: 10px; 
    border: 3px solid #73AD21;
}

.logo {
    height: 100px;
}

.logo-wrapper {
    float: left;
    padding:5px 30px;
}

.account {
    float: right; 
    padding:5px 20px;
}
.account ul {
    color:red;
}
.account li{
    display:inline;   
}
.account li + li::before {
    content: " | ";
}
.account a {    
     text-decoration: none;     
}
.account a:hover {
     background-color:#73AD21;
     text-decoration: underline;
     color:black;
}

nav {
    clear:left;
    text-align:center;      
}

nav ul {
    display:inline-block;
}

nav li{
    float: left;
    padding: 10px;
    border: 2px solid black;
    background-color:aliceblue; 
    margin:0.4em;
}
 nav li a{
     text-decoration: none;
     color:black;
}
.status .photo img{
    height: 100px;
    float: left;
    padding-left: 20px;    
}

.status {
    clear: left;
    padding-top: 15px;
    border-bottom:1px solid #F2F2F2;
    min-height:110px;
}

.description {
    padding:10px 20px;
    clear: right;
}

section {
    float: left;
    padding: 5px 0;    
    width: 70%;      
    border: 3px solid #73AD21;   
}

.bottom-right {
    position:fixed;
    bottom:0;  
    margin-left    :718px;
    height; 80px;
    font-size: 18px;
    font-family: Arial;    
    border: 3px solid #73AD21;
    padding: 5px;
    border-radius: 10px;
    background-color:#E0EEE0;
}

.status .name {
    font-weight: bold;
    font-family: arial;
    float: left;
}

.date {
    float: right;
    margin-right:1.2em;
}

aside .name {
    font-weight: bold;
    font-family: arial;
}
aside .photo img{
    height: 50px;
}

aside {
    float: right;
    padding: 70px 0 30px;  
    width: 25%;  
    overflow:auto;
    border: 3px solid #73AD21;
    padding: 10px;
    border-radius: 10px;
}

section, aside{
    margin-top:1.5em;
    border-radius: 10px;
  
}
.user{
     padding-top: 15px;
}

